--- a/portal-web/src/main/webapp/skins/standard/countriesSpecial.css
+++ b/portal-web/src/main/webapp/skins/standard/countriesSpecial.css
@@ -29,6 +29,9 @@ line-height:1.3em;
 .subject {
 	font-weight: bold;
 }
+h2 .subject {
+	font-weight: normal !important;
+}
 /* End of Added by Dave */
 
 #content h1 {
